public/css/style.css
/*Author: W3layouts
Author URL: http://w3layouts.com
License: Creative Commons Attribution 3.0 Unported
License URL: http://creativecommons.org/licenses/by/3.0/
--*/

h4, h5, h6, h1, h2, h3 {
    margin-top: 0;
}
ul, ol {
    margin: 0;
}
p {
    margin: 0;
}
html, body {
    font-family: 'Open Sans', sans-serif;
    background: #fff;
}
body a {
    transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -moz-transition: 0.5s all;
    -o-transition: 0.5s all;
    -ms-transition: 0.5s all;
}
.header {
    border-bottom: 1px solid #6f879a;
}
.logo a {
    display: block;
}
.logo {
    float: left;
}
.head-nav ul li {
    display: inline-block;
}
.head-nav ul li a {
    position: relative;
    display: inline-block;
    outline: none;
    color: #8ca9b9;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-weight: 500;
    text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
    font-size: 1em;
    margin: 0.8em 1.3em;
}
.head-nav a:hover, .head-nav a:focus {
    outline: none;
}
.head-nav ul {
    padding: 0;
    margin: 0;
}
*, *:after, *::before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
.head-nav ul li {
    display: inline-block;
    margin: 0 .5em;
    outline: none;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 1px;
    font-weight: 400;
    font-size: 16px;
}
.head-nav ul li a:hover, .head-nav ul li.active a {
    color: #fff;
}
ul a:hover, ul a:focus {
    outline: none;
    color: #fff;
    text-decoration: none;
}
.cl-effect-15 a::before {
    color: #8ca9b9;
    content: attr(data-hover);
    position: absolute;
    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
    -moz-transition: -moz-transform 0.3s, opacity 0.3s;
    transition: transform 0.3s, opacity 0.3s;
}
.cl-effect-15 a:hover::before, .cl-effect-15 a:focus::before {
    -webkit-transform: scale(0.9);
    -moz-transform: scale(0.9);
    transform: scale(0.9);
    opacity: 0;
}
.header-right ul li {
    display: inline-block;
    float: left;
}
.header-right {
    float: right;
    margin: 2.1em 0;
}
.header-right ul {
    padding: 0;
}
.header-right li {
    margin: 0 0.5em;
}
i.fb {
    width: 30px;
    height: 32px;
    background: url(../images/img-sprite.png)no-repeat -153px -6px;
    float: left;
    vertical-align: middle;
    transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -o-transition: 0.5s all;
    -moz-transition: 0.5s all;
}
i.fb:hover {
    background: url(../images/img-sprite.png)no-repeat -153px -47px;
}
i.twt {
    width: 30px;
    height: 32px;
    background: url(../images/img-sprite.png)no-repeat -8px -40px;
    float: left;
    vertical-align: middle;
    transition: 0.5s all;
    -webkit-transition: 0.5s all;
    -o-transition: 0.5s all;
    -moz-transition: 0.5s all;
}
i.twt:hover {
    background: url(../images/img-sprite.png)no-repeat -49px -40px;
}
/*--start-search--*/

.search2 {
    position: relative;
    padding: 4px;
    width: 100%;
    margin: 0;
    border: 1px solid #6f879a;
    border-radius: 0.4em;
}
.search2 input[type="text"] {
    outline: none;
    color: #6f879a;
    background: none;
    font-size: 15px;
    border: none;
    width: 79.33%;
}
.search2 input[type="submit"] {
    background: url('../images/sprit-1.png') no-repeat 0px -2px;
    padding: 6px 18px;
    border: none;
    cursor: pointer;
    position: absolute;
    outline: none;
    top: 0px;
    right: 0px;
}
/*--*/

.banner {
    background: #556a7f;
}
.content {
    background: #f5f6f7;
    padding: 3em 0;
}
.dapibus {
    background: #fff;
    padding: 2em 1.3em;
    box-shadow: 0px 1px 5px -1px rgba(104, 123, 144, 0.31);
    border-radius: 0.3em;
}
.content h2 {
    text-align: center;
    font-size: 1.1em;
    font-weight: 600;
    color: #556a7f;
    text-transform: uppercase;
    text-align: left;
    line-height: 1.4em;
    margin: 0;
}
p.adm {
    color: #868f98;
    font-size: 1em;
    font-weight: 400;
    line-height: 1.8em;
    text-align: left;
    padding: 1em 0;
}
p.adm a {
    color: #dc8e7f;
    font-weight: 700;
    text-decoration: underline;
}
p.adm a:hover {
    color: #868f98;
}
.content p {
    color: #868f98;
    font-size: 1em;
    font-weight: 400;
    line-height: 1.8em;
    text-align: left;
    padding: 1em 0;
}
.link {
    background: url(../images/arrow.png) no-repeat -1px 5px;
    display: inline-block;
    padding: 0 0 0 13px;
    line-height: 20px;
    font-size: 1em;
    font-style: normal;
    color: #dc8e7f;
    font-weight: 700;
}
a.link:hover {
    color: #736f72;
}
.cursus {
    background: #fff;
    padding: 2em 1.3em;
    margin: 2em 0 0;
    box-shadow: 0px 1px 5px -1px rgba(104, 123, 144, 0.31);
    border-radius: 0.3em;
}
.content h3 {
    text-align: center;
    font-size: 1.2em;
    font-weight: 700;
    color: #556a7f;
    text-transform: uppercase;
    text-align: left;
    line-height: 1.4em;
    margin: 0;
}
.integer {
    background: #fff;
    padding: 2em 1.3em;
    box-shadow: 0px 1px 5px -1px rgba(104, 123, 144, 0.31);
    border-radius: 0.3em;
}
.Aliquam {
    background: #fff;
    padding: 2em 1.3em;
    margin: 2em 0 0;
    box-shadow: 0px 1px 5px -1px rgba(104, 123, 144, 0.31);
    border-radius: 0.3em;
}
.vitae {
    background: #fff;
    padding: 2em 1.3em;
    margin: 2em 0 0;
    box-shadow: 0px 1px 5px -1px rgba(104, 123, 144, 0.31);
    border-radius: 0.3em;
}
.integer li {
    display: inline-block;
    margin: 3px 1px;
}
.lorem {
    background: #fff;
    padding: 2em 1.3em;
    margin: 2em 0 0;
    box-shadow: 0px 1px 5px -1px rgba(104, 123, 144, 0.31);
    border-radius: 0.3em;
}
.content h4 {
    text-align: center;
    font-size: 1em;
    font-weight: 700;
    color: #556a7f;
    text-transform: uppercase;
    text-align: left;
    line-height: 1.4em;
    margin-bottom: 1em;
}
.posts {
    text-align: left;
}
/* ... */

